--- a/src/CoreJWT.csproj
+++ b/src/CoreJWT.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <Description>A basic implementation of the JWT standard for .Net Core</Description>
+    <Description>A basic implementation of the JWT standard for .Net Core 2</Description>
     <Authors>CoreJWT Contributors</Authors>
     <Company />
     <Version>0.1.0-alpha</Version>
@@ -16,6 +16,7 @@
     <PackageIconUrl>https://github.com/GZidar/CoreJWT/src/corejwt.png</PackageIconUrl>
     <AssemblyVersion>0.1.0.0</AssemblyVersion>
     <FileVersion>0.1.0.0</FileVersion>
+    <PackageId>CoreJWT2</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
